--- a/myapp2018/pom.xml
+++ b/myapp2018/pom.xml
@@ -6,7 +6,7 @@
   <version>0.1.0-SNAPSHOT</version>
 
   <groupId>foo</groupId>
-  <artifactId>bar</artifactId>
+  <artifactId>tinypet</artifactId>
 
   <properties>
     <appengine.maven.plugin.version>1.3.2</appengine.maven.plugin.version>
@@ -20,7 +20,7 @@
         <endpoints.framework.version>2.1.2</endpoints.framework.version>
     <endpoints.management.version>1.0.4</endpoints.management.version>
     
-    <endpoints.project.id>SuperMomo44</endpoints.project.id>
+    <endpoints.project.id>cloud-miage</endpoints.project.id>
   </properties>
   
   <dependencyManagement>
